--- a/steam/custom-css/src/library.css
+++ b/steam/custom-css/src/library.css
@@ -249,3 +249,8 @@
 .appportrait_AppPortraitBanner_ {
   border-radius: var(--banner-border-radius);
 }
+
+/* hide item owners */
+._3zxPLsbnU5LuorR0_EPCEC {
+  display: none;
+}
