--- a/steam/libraryroot.custom.css
+++ b/steam/libraryroot.custom.css
@@ -1,4 +1,4 @@
 @import url('./custom-css/general.css');
 @import url('./custom-css/library.css');
 @import url('./custom-css/overlay.css');
-/* @import url('./custom-css/theme.css'); */
+@import url('./custom-css/theme.css');
