--- a/steam/custom-css/src/theme.css
+++ b/steam/custom-css/src/theme.css
@@ -1,13 +1,25 @@
 :root {
-  --c-background: #202326;
-  --c-sidebar: #171718;
+  /* --c-background: #202326; */
+  /* --c-sidebar: #171718; */
+  --c-context-bg: #2b2b2b;
+  --c-context-border: #808080;
 }
 
-.libraryhome_InnerContainer,
+/* .libraryhome_InnerContainer,
 .libraryhome_UpdatesContainer {
   background: var(--c-background) !important;
+} */
+
+/* .gamelistbar_Container {
+  background: var(--c-sidebar) !important;
+} */
+
+.ContextMenuPopupBody .contextmenu_contextMenu {
+  background: var(--c-context-bg);
 }
 
-.gamelistbar_Container {
-  background: var(--c-sidebar) !important;
+.ContextMenuPopupBody
+  .contextmenu_ContextMenuSeparator
+  + .contextmenu_contextMenuItem {
+  border-color: var(--c-context-border);
 }
