Fixed library app hover text without background.

--- a/steam/custom-css/library.css
+++ b/steam/custom-css/library.css
@@ -210,6 +210,9 @@
   ) {
   transform: rotateX(3deg) translateZ(15px);
 }
+.My_SveQxVY_oRxfkK5mqN {
+  background: #363c45;
+}
 
 /* hide sidebar game icons */
 ._9sPoVBFyE_vE87mnZJ5aB .gamelistentry_AppIcon,
