Fixed library app hover text without background.

--- a/steam/custom-css/library.css
+++ b/steam/custom-css/library.css
@@ -210,6 +210,8 @@
   ) {
   transform: rotateX(3deg) translateZ(15px);
 }
+
+/* fixed "family sharing" missing a bg */
 .My_SveQxVY_oRxfkK5mqN {
   background: #363c45;
 }
