Fixed some library inconsistencies.

--- a/steam/custom-css/src/library.css
+++ b/steam/custom-css/src/library.css
@@ -175,6 +175,10 @@
   transform: none !important;
 }
 
+.appgrid_LibraryImageBackgroundGlow {
+  display: none;
+}
+
 /* custom library section spacing */
 .libraryhomeshowcases_ShowcaseOuter {
   padding-bottom: var(--library-section-gap);
