--- a/steam/custom-css/library.css
+++ b/steam/custom-css/library.css
@@ -175,6 +175,10 @@
   transform: none !important;
 }
 
+._6zcMsloKVA3_bv5nQ0OQE {
+  display: none;
+}
+
 /* custom library section spacing */
 ._2tC_c87MH67xQM7Y0pVyXm {
   padding-bottom: var(--library-section-gap);
