--- a/steam/custom-css/src/theme.css
+++ b/steam/custom-css/src/theme.css
@@ -1,8 +1,8 @@
 :root {
-  /* --c-background: #202326; */
-  /* --c-sidebar: #171718; */
+  --c-background: #2c323a;
   --c-context-bg: #2b2b2b;
   --c-context-border: #808080;
+  /* --c-sidebar: #171718; */
 }
 
 /* .libraryhome_InnerContainer,
@@ -13,6 +13,11 @@
 /* .gamelistbar_Container {
   background: var(--c-sidebar) !important;
 } */
+
+.collectionview_OuterContainer,
+.libraryhome_LibraryHome {
+  background: var(--c-background);
+}
 
 .ContextMenuPopupBody .contextmenu_contextMenu {
   background: var(--c-context-bg);
