--- a/steam/custom-css/theme.css
+++ b/steam/custom-css/theme.css
@@ -1,8 +1,8 @@
 :root {
-  /* --c-background: #202326; */
-  /* --c-sidebar: #171718; */
+  --c-background: #2c323a;
   --c-context-bg: #2b2b2b;
   --c-context-border: #808080;
+  /* --c-sidebar: #171718; */
 }
 
 /* ._2AUVZlzQq67qe3yhLZsPPB,
@@ -13,6 +13,11 @@
 /* ._3x1HklzyDs4TEjACrRO2tB {
   background: var(--c-sidebar) !important;
 } */
+
+._2sNr7PFYcJZWNkEMCDVVPR,
+._3Sb2o_mQ30IDRh0C72QUUu {
+  background: var(--c-background);
+}
 
 .ContextMenuPopupBody .LQkrbbayZPY11qHm01t7F {
   background: var(--c-context-bg);
