Applied border radius to game card hover.

--- a/steam/custom-css/library.css
+++ b/steam/custom-css/library.css
@@ -186,6 +186,7 @@
 
 /* cover border radius */
 .WYgDg9NyCcMIVuMyZ_NBC,
+._2sGn0cBsD44TjnUIh-lx9d,
 ._2XftMcBO9aY7VXCivzuW7- {
   border-radius: var(--cover-border-radius);
   overflow: hidden;
