--- a/steam/custom-css/general.css
+++ b/steam/custom-css/general.css
@@ -26,7 +26,7 @@
 }
 
 /* reduce context menu padding */
-.DesktopUI .pFo3kQOzrl9qVLPXXGIMp,
-._7K1n9EZg9218K75ZOzcHl .pFo3kQOzrl9qVLPXXGIMp {
+.DesktopUI ._1n7Wloe5jZ6fSuvV18NNWI,
+._3qIuY9S_vXm3IQS-uE9SRS ._1n7Wloe5jZ6fSuvV18NNWI {
   padding: var(--context-menu-padding);
 }
