--- a/steam/custom-css/theme.css
+++ b/steam/custom-css/theme.css
@@ -19,12 +19,12 @@
   background: var(--c-background);
 }
 
-.ContextMenuPopupBody .LQkrbbayZPY11qHm01t7F {
+.ContextMenuPopupBody .PP7LM0Ow1K5qkR8WElLpt {
   background: var(--c-context-bg);
 }
 
 .ContextMenuPopupBody
-  ._1F2EcTc-0vNkdiBz8ATakM
-  + .pFo3kQOzrl9qVLPXXGIMp {
+  .WUOrULWKkGLl3ZUQdDXg8
+  + ._1n7Wloe5jZ6fSuvV18NNWI {
   border-color: var(--c-context-border);
 }
