Partially reverted minor change.

--- a/steam/custom-css/library.css
+++ b/steam/custom-css/library.css
@@ -104,7 +104,7 @@
   border-width: 0 !important;
 }
 .u1xD3KJEgksF_J_5TLZzO {
-  padding: 8px 12px !important;
+  padding: 24px 12px 0 !important;
 }
 .Ma65KR7z4XhZl4vJvxf4D {
   gap: var(--grid-gap) !important;
