--- a/steam/custom-css/src/library.css
+++ b/steam/custom-css/src/library.css
@@ -104,7 +104,7 @@
   border-width: 0 !important;
 }
 .allcollections_ScrollContainer {
-  padding: 8px 12px !important;
+  padding: 24px 12px 0 !important;
 }
 .allcollections_Grid {
   gap: var(--grid-gap) !important;
