--- a/steam/custom-css/library.css
+++ b/steam/custom-css/library.css
@@ -97,6 +97,9 @@
 ._3DJLGrqzoQ5vMDI_4VG502[style*='grid-auto-rows: 148px;'] {
   grid-auto-rows: var(--cover-width) !important;
 }
+._23SnllqT_AqZ1C_QHcNQ4Z {
+  padding-left: 0;
+}
 .DGRkX_HYUzbFaqRysWQVi {
   height: auto !important;
 }
