--- a/steam/custom-css/src/library.css
+++ b/steam/custom-css/src/library.css
@@ -97,6 +97,9 @@
 .libraryhomeshowcases_ShowcaseGrid[style*='grid-auto-rows: 148px;'] {
   grid-auto-rows: var(--cover-width) !important;
 }
+.libraryhomeshowcases_ShowcaseHeader {
+  padding-left: 0;
+}
 .cssgrid_Container {
   height: auto !important;
 }
