--- a/steam/custom-css/library.css
+++ b/steam/custom-css/library.css
@@ -158,7 +158,7 @@
 }
 /* */
 
-/*  move "add shelf" button to the bottom */
+/* move "add shelf" button to the bottom */
 ._3Sb2o_mQ30IDRh0C72QUUu > div {
   display: flex;
   flex-direction: column;
@@ -238,9 +238,10 @@
   z-index: 10;
 }
 
-/* fixed "family sharing" missing a bg */
+/* fixed "family sharing" missing a bg and spanning two lines */
 .My_SveQxVY_oRxfkK5mqN {
   background: #363c45;
+  font-size: 11.75px;
 }
 
 /* hide sidebar game icons */
