Fixed minor randomly occurring issue.

--- a/steam/custom-css/overlay.css
+++ b/steam/custom-css/overlay.css
@@ -4,6 +4,10 @@
 }
 
 /* hide achievement date in sidebar */
+._2Kmn7fJOkLT4KyWl467a9M {
+  min-height: 80px !important;
+}
+
 ._2Kmn7fJOkLT4KyWl467a9M
   .cvw8DHMUBKuZs5DeLJOQ2
   .k02sevxj1a1YpBto7_V57 {
