--- a/steam/custom-css/library.css
+++ b/steam/custom-css/library.css
@@ -244,6 +244,11 @@
   font-size: 11.75px;
 }
 
+/* hide redundant home/collections sidebar buttons */
+._2TKEazUUS3TlniZfpc8OOe {
+  display: none;
+}
+
 /* hide sidebar game icons */
 ._9sPoVBFyE_vE87mnZJ5aB .gamelistentry_AppIcon,
 ._9sPoVBFyE_vE87mnZJ5aB .ga1hyw11cdBVodrCAidPF {
